# CMake-Project-Template

./: .gitignore  CMakeLists.txt  ReadMe.md  sln_cpp_template.code-workspace
ch13/: CMakeLists.txt  ch13_10.cpp
ch3/: ch3_1.cpp  ch3_2.cpp  ch3_3.cpp  ch3_5.cc
ch4/: ch4_4.cpp  ch4_5.cpp  ch4_7.cpp
cmake/: aux_cpp.cmake
demo3/: demo3.cpp
